# supervisor-webui

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
deploy/ansible/: initial_setup.sql  inventory.ini  playbook.yml
deploy/docker/: Dockerfile  pyproject.toml  supervisor-webui.env
deploy/nginx/: superv-nginx-ext.conf  superv-nginx-int.conf
src/: utils.py  webserver.py
